[package]
name = "stupid1"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
version = "1.1.4"
edition = "2021"
license = "MIT"

[features]
debug = []

[profile.release]
strip = "debuginfo"
lto = "thin"
panic = "abort"

[dependencies]
libc = { version = "^0.2", features = [] }

[package.metadata.deb]
license-file = ["LICENSE.md", "4"]
extended-description = """\
The simplest possible init program that kills zombie processes and starts /usr/bin/init as PID1."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/stupid1", "usr/bin/", "755"],
]
